--- a/style.css
+++ b/style.css
@@ -218,3 +218,9 @@ nav{
     font-size: 15px;
     }
 }
+*{
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
+    -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
+    outline: none !important;
+
+}
