--- a/style.css
+++ b/style.css
@@ -33,12 +33,15 @@ h4{
     color: rgb(211, 211, 226) ;
     font-size: 30px ;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   
+    margin-left: 10px;
 }
 li{
     color: rgb(211, 211, 226) ;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
+     margin-left: 15px;
+   list-style: none;
+}
 }
 
 .main-button {
@@ -211,11 +214,25 @@ nav{
     
 }
 @media screen and (max-width: 300px) {
+       li{
+        font-size: 15px;
+    }
+    h4{
+        font-size: 15px;
+    }
+    h1{
+        font-size: 15px
+    }
     .main-button{
         
     min-height: 50px;
     min-width: 50px;
-    font-size: 15px;
+    font-size: 10px;
+    }
+     .main-button:hover {
+        font-size: 12px;
+       
+    
     }
 }
 *{
